--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
   <body class="page">
     <header class="header">
       <img class="header__logo" src="./images/header-logo.svg" alt="Карта России">
-      <ul class="header__lang">
-        <li class="header__lang-rus"><a href="#" class="link">Ru</a></li>
-        <li class="header__lang-eng"><a href="#" class="link-eng">En</a></li>
-      </ul> 
+      <div class="header__lang">
+        <a href="#" class="header__lang-link header__lang-link_active">Ru</a>
+        <a href="#" class="header__lang-link">En</a>
+      </div> 
     </header>
     <main class="main">
       <section class="lead">
         <h1 class="lead__title">Путешествия по России</h1>
-        <h2 class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</h2>
+        <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
         <div class="lead__image">
           <img class="lead__image-background" src="./images/lead-polka.jpg" alt="Боковая полка">
         </div>
@@ -50,7 +50,7 @@
       </section>
       <section class="places">
         <div class="place">
-          <h3 class="place__title">Куршская коса</h3>
+          <h2 class="place__title">Куршская коса</h2>
           <div class="place__website">
             <p class="place__website-url-heading">URL</p>
             <a class="place__website-link" href="http://park-kosa.ru">park-kosa.ru</a>
@@ -69,7 +69,7 @@
           </div>
         </div>
         <div class="place">
-          <h3 class="place__title">Кольский</h3>
+          <h2 class="place__title">Кольский</h2>
           <div class="place__website">
             <p class="place__website-url-heading">URL</p>
             <a class="place__website-link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy">National Geographic</a>
@@ -88,7 +88,7 @@
         </div>
       </div>
         <div class="place">
-          <h3 class="place__title">Алтай</h3>
+          <h2 class="place__title">Алтай</h2>
           <div class="place__website">
             <p class="place__website-url-heading">URL</p>
             <a class="place__website-link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">YouTube</a>
@@ -106,7 +106,7 @@
         </div>
       </div>
         <div class="place">
-          <h3 class="place__title">Зимний Байкал</h3>
+          <h2 class="place__title">Зимний Байкал</h2>
           <div class="place__website">
             <p class="place__website-url-heading">URL</p>
             <a class="place__website-link" href="https://www.youtube.com/watch?v=7ZEsoV7kWAQ">https://vk.com/baikalmile</a>
@@ -124,7 +124,7 @@
         </div> 
       </div>
         <div class="place">
-          <h3 class="place__title">Карелия</h3>
+          <h2 class="place__title">Карелия</h2>
           <div class="place__website">
             <p class="place__website-url-heading">URL</p>
             <a class="place__website-link" href="http://vodlozero.ru">http://vodlozero.ru/</a>
@@ -149,23 +149,25 @@
       </section>
     </main>
     <footer class="footer">
-      <ul class="footer__links-list">
-        <li>
-          <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-        </li>
-        <li>
-          <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-        </li>
-        <li>
-          <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
-        </li>
-        <li>
-          <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
-        </li>
-        <li>
-          <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
-        </li>
-      </ul>
+      <nav>
+        <ul class="footer__links-list">
+          <li>
+            <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
+          </li>
+          <li>
+            <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
+          </li>
+          <li>
+            <a href="https://rasp.yandex.ru" class="footer__link">Расписание</a>
+          </li>
+          <li>
+            <a href="https://calendar.yandex.ru" class="footer__link">Календарь</a>
+          </li>
+          <li>
+            <a href="https://travel.yandex.ru" class="footer__link">Путешествия</a>
+          </li>
+        </ul>
+      </nav>
       <p class="footer__copyright">© 2022. Горлина Анастасия</p>
     </footer>
   </body>
